# app/Http/Controllers/Api/V1/Admin/ProjectsApiController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Api\V1\Admin;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\LoginRequest;
 use App\Http\Requests\StoreProjectRequest;
 use App\Http\Requests\UpdateProjectRequest;
 use App\Http\Resources\Admin\ProjectResource;
@@ -12,14 +13,56 @@ use Illuminate\Http\Request;
 use Symfony\Component\HttpFoundation\Response;
 
 
+
 class ProjectsApiController extends Controller
 {
+
+   /**
+     *  @OA\Post(
+     *      path="/login",
+     *      summary="Login para gerar o token",
+     *      tags={"Projects"},
+     *      @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/LoginRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Donec sollicitudin molestie malesuada.",
+     *          @OA\JsonContent(ref="#/components/schemas/User") 
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="Unauthorized"
+     *      ),
+     *      @OA\Response(
+     *          response="403",
+     *          description="Forbidden"
+     *      )
+     *  )
+     */
+
+   public function login(LoginRequest $request)
+   {
+       $credentials = $request->only('email', 'password');
+       
+       if(!auth()->attempt($credentials))
+       {
+           abort(401, 'Invalid Crendentials');
+       }
+       
+       $token = auth()->user()->createToken('auth_token');
+       return (new ProjectResource($token))
+       ->response()
+       ->setStatusCode(Response::HTTP_CREATED);;
+   }
      /**
      * @OA\Get(
      *      path="/index",
      *      operationId="index",
      *      tags={"Projects"},
      *      summary="Get list of user",
+     *      security={{"bearer_token":{}}},
      *      description="Returns list of user",
      *      @OA\Response(
      *          response=200,
@@ -39,7 +82,6 @@ class ProjectsApiController extends Controller
     
    public function index()
    {
-      
       return new ProjectResource(Project::All());
    }
 
@@ -49,6 +91,7 @@ class ProjectsApiController extends Controller
     *     operationId="show",
     *     tags={"Projects"},
     *     summary="Get user information",
+    *      security={{"bearer_token":{}}},
     *     description="Returns user data",
     *     @OA\Parameter(
     *          name="id",
@@ -81,7 +124,9 @@ class ProjectsApiController extends Controller
 
    public function show($id)
    {
+      
       $project = Project::find($id);
+      
       return new ProjectResource($project);
    }
 
@@ -91,6 +136,7 @@ class ProjectsApiController extends Controller
      *      operationId="store",
      *      tags={"Projects"},
      *      summary="Store new project",
+     *      security={{"bearer_token":{}}},
      *      description="Returns project data",
      *      @OA\RequestBody(
      *          required=true,
@@ -133,6 +179,7 @@ class ProjectsApiController extends Controller
      *      operationId="update",
      *      tags={"Projects"},
      *      summary="Update existing user",
+     *      security={{"bearer_token":{}}},
      *      description="Returns updated project data",
      *      @OA\Parameter(
      *         name="id",
@@ -172,8 +219,10 @@ class ProjectsApiController extends Controller
      */
    public function update(UpdateProjectRequest $request, $id)
    {
+     
+     
       $project = Project::find($id);
-
+   
       $project->update($request->all());
 
       return (new ProjectResource($project))
@@ -187,6 +236,7 @@ class ProjectsApiController extends Controller
      *      operationId="delete",
      *      tags={"Projects"},
      *      summary="Delete existing user",
+     *      security={{"bearer_token":{}}},
      *      description="Deletes a record and returns no content",
      *      @OA\Parameter(
      *          name="id",
