# app/Virtual/Models/User.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Virtual\Models;
+
+/**
+ * @OA\Schema(
+ *     title="User",
+ *     description="User model",
+ *     @OA\Xml(
+ *         name="User"
+ *     )
+ * )
+ */
+class User
+{
+
+    /**
+     * @OA\Property(
+     *      title="email",
+     *      description="email of the user",
+     *      example="teste@gmail.com"
+     * )
+     *
+     * @var string
+     */
+    public $email;
+
+    /**
+     * @OA\Property(
+     *      title="password",
+     *      description="Password of the user",
+     *      example="@Mudar123.com"
+     * )
+     *
+     * @var string
+     */
+    public $password;
+
+    }
